[project]
name = "bar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "flask[dotenv] >= 3 ; sys_platform == 'darwin'",
  "flask[dotenv] < 3 ; sys_platform != 'darwin'",
]

[project.optional-dependencies]
async = [
  "iniconfig"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
