[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

# [build-system]
# requires = ["setuptools>=42"]
# build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "orjson>=3.10.7",
]
description = 'test'
dynamic = ["version"]
keywords = []
name = "abc"
requires-python = ">=3.10"

[project.optional-dependencies]
all = [
    "abc[fastapi_optional]",
]
fastapi_optional = [
    "fastapi>=0.110.2",
]

[tool.hatch.version]
path = "src/__about__.py"
scheme = "standard"
validate-bump = false
