[project]
name = "circular-two"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Charlie Marsh", email = "charlie.r.marsh@gmail.com" }
]
requires-python = ">=3.13.0"
dependencies = ["circular-one"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
