[project]
name = "uvtest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["torch>=2.6.0", "torchvision>=0.21.0"]

[tool.uv.sources]
torch = { index = "pytorch_cu124", marker = "sys_platform == 'linux'" }
torchvision = { index = "pytorch_cu124", marker = "sys_platform == 'linux'" }

[[tool.uv.index]]
name = "pytorch_cu124"
url = "https://download.pytorch.org/whl/cu124"
