[metadata]
name = pytest-fail-slow
version = attr: version.__version__
description = Fail tests that take too long to run
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = pytest-fail-slow@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/pytest-fail-slow
keywords = 
	pytest
	slow tests
	timeout
classifiers = 
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: Implementation :: CPython
	Programming Language :: Python :: Implementation :: PyPy
	License :: OSI Approved :: MIT License
	Environment :: Plugins
	Framework :: Pytest
	Intended Audience :: Developers
	Topic :: Software Development :: Testing
project_urls = 
	Source Code = https://github.com/jwodder/pytest-fail-slow
	Bug Tracker = https://github.com/jwodder/pytest-fail-slow/issues

[options]
py_modules = pytest_fail_slow
package_dir = 
	=src
include_package_data = True
python_requires = >=3.7
install_requires = 
	pytest >= 6.0

[options.entry_points]
pytest11 = 
	fail-slow = pytest_fail_slow

[egg_info]
tag_build = 
tag_date = 0

