[package]
name = "axi-dispatch"
version = "0.0.1"
description = "Avoid cyclic crate dependencies between resolver, installer and builder"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
distribution-types = { path = "../distribution-types" }
gourgeist = { path = "../gourgeist" }
pep508_rs = { path = "../pep508-rs" }
platform-host = { path = "../platform-host" }
platform-tags = { path = "../platform-tags" }
axi-build = { path = "../axi-build" }
axi-cache = { path = "../axi-cache" }
axi-client = { path = "../axi-client" }
axi-distribution = { path = "../axi-distribution" }
axi-installer = { path = "../axi-installer" }
axi-interpreter = { path = "../axi-interpreter" }
axi-resolver = { path = "../axi-resolver" }
axi-traits = { path = "../axi-traits" }
pypi-types = { path = "../pypi-types" }

anyhow = { workspace = true }
fs-err = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
