[package]
name = "axi-installer"
version = "0.0.1"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
distribution-filename = { path = "../distribution-filename" }
distribution-types = { path = "../distribution-types" }
install-wheel-rs = { path = "../install-wheel-rs", default-features = false }
once-map = { path = "../once-map" }
pep440_rs = { path = "../pep440-rs" }
pep508_rs = { path = "../pep508-rs" }
platform-tags = { path = "../platform-tags" }
axi-cache = { path = "../axi-cache" }
axi-client = { path = "../axi-client" }
axi-distribution = { path = "../axi-distribution" }
axi-extract = { path = "../axi-extract" }
axi-fs = { path = "../axi-fs" }
axi-git = { path = "../axi-git", features = ["vendored-openssl"] }
axi-interpreter = { path = "../axi-interpreter" }
axi-normalize = { path = "../axi-normalize" }
axi-traits = { path = "../axi-traits" }
pypi-types = { path = "../pypi-types" }
requirements-txt = { path = "../requirements-txt" }

anyhow = { workspace = true }
fs-err = { workspace = true }
futures = { workspace = true }
rayon = { workspace = true }
rustc-hash = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
