[package]
name = "axi-resolver"
version = "0.0.1"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
cache-key = { path = "../cache-key" }
distribution-filename = { path = "../distribution-filename", features = ["serde"] }
distribution-types = { path = "../distribution-types" }
install-wheel-rs = { path = "../install-wheel-rs" }
once-map = { path = "../once-map" }
pep440_rs = { path = "../pep440-rs", features = ["pubgrub"] }
pep508_rs = { path = "../pep508-rs" }
platform-host = { path = "../platform-host" }
platform-tags = { path = "../platform-tags" }
axi-cache = { path = "../axi-cache" }
axi-client = { path = "../axi-client" }
axi-distribution = { path = "../axi-distribution" }
axi-git = { path = "../axi-git", features = ["vendored-openssl"] }
axi-interpreter = { path = "../axi-interpreter" }
axi-normalize = { path = "../axi-normalize" }
axi-traits = { path = "../axi-traits" }
axi-warnings = { path = "../axi-warnings" }
pypi-types = { path = "../pypi-types" }

anstream = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"], optional = true }
dashmap = { workspace = true }
derivative = { workspace = true }
fs-err = { workspace = true, features = ["tokio"] }
futures = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
once_cell = { workspace = true }
owo-colors = { workspace = true }
petgraph = { workspace = true }
pubgrub = { workspace = true }
reqwest = { workspace = true }
rustc-hash = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tokio-stream  = { workspace = true }
tokio-util = { workspace = true, features = ["compat"] }
tracing = { workspace = true }
url = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
gourgeist = { path = "../gourgeist" }
axi-interpreter = { path = "../axi-interpreter" }

once_cell = { version = "1.19.0" }
insta = { version = "1.34.0" }

[features]
default = ["pypi"]
# Introduces a dependency on PyPI.
pypi = []
