[package]
name = "bench"
version = "0.0.0"
description = "uv Micro-benchmarks"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[lib]
bench = false

[[bench]]
name = "distribution-filename"
path = "benches/distribution_filename.rs"
harness = false

[[bench]]
name = "uv"
path = "benches/uv.rs"
harness = false

[dependencies]
distribution-filename = { workspace = true }
distribution-types = { workspace = true }
criterion = { version = "0.5.1", default-features = false, features = ["async_tokio"] }
tokio = { workspace = true }
codspeed-criterion-compat = { version = "2.6.0", default-features = false, optional = true }
tempfile = { workspace = true }
fs-err = { workspace = true }
uv-resolver = { workspace = true }
uv-cache = { workspace = true }
uv-client = { workspace = true }
uv-configuration = { workspace = true }
uv-types = { workspace = true }
uv-interpreter = { workspace = true }
platform-tags = { workspace = true }
pep508_rs = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }

[features]
codspeed = ["codspeed-criterion-compat"]
