[package]
name = "bench"
version = "0.0.0"
description = "uv Micro-benchmarks"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[lib]
bench = false

[[bench]]
name = "distribution-filename"
path = "benches/distribution_filename.rs"
harness = false

[[bench]]
name = "uv"
path = "benches/uv.rs"
harness = false

[dependencies]
distribution-filename = { workspace = true }
distribution-types = { workspace = true }
pep508_rs = { workspace = true }
platform-tags = { workspace = true }
uv-cache = { workspace = true }
uv-client = { workspace = true }
uv-dispatch = { workspace = true }
uv-configuration = { workspace = true }
uv-distribution = { workspace = true }
uv-interpreter = { workspace = true }
uv-resolver = { workspace = true }
uv-types = { workspace = true }
install-wheel-rs = { workspace = true }

anyhow = { workspace = true }
codspeed-criterion-compat = { version = "2.6.0", default-features = false, optional = true }
criterion = { version = "0.5.1", default-features = false, features = ["async_tokio"] }
once_cell = { workspace = true }
tokio = { workspace = true }

[features]
codspeed = ["codspeed-criterion-compat"]
