[package]
name = "distribution-filename"
version = "0.0.1"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
pep440_rs = { workspace = true }
platform-tags = { workspace = true }
uv-normalize = { workspace = true }

rkyv = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
insta = { version = "1.36.1" }
